Bug 170758 - high load when tagging
Summary: high load when tagging
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Database-Scan (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-09-09 18:14 UTC by Arnd Baecker
Modified: 2017-07-25 16:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.0
Sentry Crash Report:


Attachments
prevent kio_digikamalbums/dates (etc.) when database file is changed (2.99 KB, patch)
2008-09-09 18:17 UTC, Arnd Baecker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Arnd Baecker 2008-09-09 18:14:48 UTC
Version:            (using KDE 3.5.9)
OS:                Linux
Installed from:    Ubuntu Packages

When associating tags, I encounter a substantial CPU load,
caused by (sometimes several) kio_digikamdates and
kio_digikamalbums processes.

The origin of this seems to be the following:
At some point one gets on the konsole:
"Noticed file change in directory /home/username/Pictures"
(i.e. the directory containing the database!)
this then triggers DIO::scan
which then calls in dio.cpp in
void Watch::slotDone(KIO::Job*)
    Digikam::AlbumManager::instance()->refresh();
    Digikam::AlbumLister::instance()->refresh();
I.e. those which then lead to the invocation of
kio_digikamalbums and kio_digikamdates.
Comment 1 Arnd Baecker 2008-09-09 18:17:46 UTC
Created attachment 27339 [details]
prevent kio_digikamalbums/dates  (etc.) when database file is changed

Marcel pointed out to me on the mailing list that for 0.10, a solution
has been implemented.

The attached patch is a modified backport from the KDE4 version,
which ensures that data-base changes don't trigger a rescan.
Comment 2 Andi Clemens 2008-09-12 13:34:45 UTC
Hi Arnd,

I've just checked your patch, works fine here... as Marcel mentioned on the ML: I guess you can just apply the patch.

Andi
Comment 3 Arnd Baecker 2008-09-22 18:08:09 UTC
Fixed in r863588.
Comment 4 caulier.gilles 2017-07-15 21:52:17 UTC
Problem not reproducible since digiKam 5.0.0 as all KIO slave have been replaced by a multithreaded interface to query the database.