Prevent that changes of the database file trigger a rescan which leads to an invocation of kio_digikamalbums/dates etc (this is a modified backport from the KDE4 version).

BUG: 170758


svn path=/branches/extragear/kde3/graphics/digikam/; revision=863588